# mlx-embed-rerank-server

./: .gitignore  AUTO_STARTUP_SUMMARY.md  BENCHMARK_REPORT.md  GEMINI.md  LICENSE  MIGRATION_SUMMARY.md  MLX対応検討.md  README.md  README_JA.md  TODO.md  mlx_embed_rerank_server.py  pyproject.toml  run_mlx_server.sh  run_ruri_server.sh  ruri_embed_rerank_server.py  test_mlx.py
scripts/: benchmark_100_sentences.py  rag_pipeline_chromadb.py
test-tools/: test_infer.py
tests/: test_api.py
tests/data/: test_cases.json
