[project]
name = "embed-reranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "numpy>=2.4.1",
    "protobuf>=6.33.4",
    "sentence-transformers>=3.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.41",
    "uvicorn[standard]>=0.27",
]
