[project]
name = "mlx-embed-rerank-server"
version = "0.1.0"
description = "MLX-based embedding and reranking API server for Japanese and multilingual RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mlx",
    "mlx-embeddings",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]



